feat: Implement item exploration and identification features
- Added core logic for item generation in `gen_item.md`, detailing item attributes and LLM integration.
- Developed exploration logic in `identify_item.md`, outlining user interactions and LLM responses.
- Created `identify_item.js` to handle item exploration, including damage calculations and ability discovery.
- Designed UI for item identification in `identify.html` and `identify_ui.js`, enabling user input and chat interactions.
- Established item profile display in `profile.html` and `profile_ui.js`, showcasing item details and digital signatures.
- Introduced settings management in `settings_ui.js`, allowing users to update their identity and manage cryptographic keys.
- Implemented cryptographic functions in `crypto.js` for key generation, signing, and verification.
- Enhanced local storage management in `localstorage.js` to support new user attributes and key storage.
- Updated CSS styles for improved UI presentation across various components.

--- a/identify.html
+++ b/identify.html
@@ -30,6 +30,6 @@
         </div>
     </div>
 
-    <script type="module" src="./ui/explore_ui.js"></script>
+    <script type="module" src="./ui/identify_ui.js"></script>
 </body>
 </html>
