--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mist Ahead</title>
     <link rel="stylesheet" href="./ui/style.css">
+    <link rel="stylesheet" href="./ui/settings.css">
 </head>
 
 <body>
@@ -35,4 +36,5 @@
     <!-- Scripts -->
     <script type="module" src="./game/gen_item.js"></script>
     <script type="module" src="./ui/inventory_ui.js"></script>
+    <script type="module" src="./ui/settings_ui.js"></script>
 </body>
